deployment/airflow/kustomize/base/deployment-manifest/deployment-airflow-postgres.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: airflow-airflow-postgresql
  labels:
    app.kubernetes.io/instance: airflow
    app.kubernetes.io/name: airflow-postgresql
    app.kubernetes.io/part-of: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: airflow
      app.kubernetes.io/name: airflow-postgresql
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: airflow
        app.kubernetes.io/name: airflow-postgresql
    spec:
      containers:
        - resources:
            limits:
              cpu: 500m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 6
          terminationMessagePath: /dev/termination-log
          name: airflow-postgresql
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 6
          ports:
            - name: tcp-postgresql
              containerPort: 5432
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: aflow-data
              mountPath: /var/lib/pgsql/data
          terminationMessagePolicy: File
          # image: 'registry.redhat.io/rhel8/postgresql-13:1-101'
          image: 'quay.io/osclimate/postgresql-13:1-101'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  volumeClaimTemplates:
    - metadata:
        name: aflow-data
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: "2Gi"
  updateStrategy:
    type: RollingUpdate
