deployment/airflow/kustomize/base/deployment-manifest/deployment-airflow.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: airflow
  labels:
    app.kubernetes.io/part-of: airflow
    app.kubernetes.io/name: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow
  template:
    metadata:
      labels:
        app: airflow
    spec:
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - resources:
            limits:
              cpu: '2'
              memory: 4Gi
            requests:
              cpu: '2'
              memory: 4Gi
          terminationMessagePath: /dev/termination-log
          name: airflow-web
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: dags-data
              mountPath: /opt/airflow/dags
            - name: dags-generated-data
              mountPath: /opt/airflow/dag_generated_configs
            - name: dags-log
              mountPath: /opt/airflow/logs
            # - name: airflowweb-config
            #   mountPath: /opt/airflow/webserver_config.py
            #   subPath: webserver_config.py
          terminationMessagePolicy: File
          image: quay.io/osclimate/airflow:2.7.3-omdingest-1.2.2
          args:
            - bash
            - '-c'
            - exec airflow webserver
        - resources:
            limits:
              cpu: '2'
              memory: 4Gi
            requests:
              cpu: '1'
              memory: 2Gi
          terminationMessagePath: /dev/termination-log
          name: scheduler
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: dags-data
              mountPath: /opt/airflow/dags
            - name: dags-generated-data
              mountPath: /opt/airflow/dag_generated_configs
            - name: dags-log
              mountPath: /opt/airflow/logs
          terminationMessagePolicy: File
          image: quay.io/osclimate/airflow:2.7.3-omdingest-1.2.2
          args:
            - bash
            - '-c'
            - exec airflow scheduler
        - name: mc
          image: 'quay.io/osclimate/minioclient:1.6'
          resources:
            limits:
              cpu: '2'
              memory: 4Gi
            requests:
              cpu: '1'
              memory: 2Gi
          volumeMounts:
            - name: mcconfig
              mountPath: /.mc
            - name: dags-data
              mountPath: /opt/airflow/dags
            - name: dags-log
              mountPath: /opt/airflow/logs
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      volumes:
        - name: dags-data
          emptyDir: {}
        - name: dags-generated-data
          emptyDir: {}
        - name: dags-log
          emptyDir: {}
        - name: config
          emptyDir: {}
        - name: mcconfig
          emptyDir: {}
        # - name: airflowweb-config
        #   configMap:
        #     name: airflow-sso-config
        #     defaultMode: 420
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
