deployment/airflow/kustomize/base/deployment-manifest/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-postgresql
  labels:
    app.kubernetes.io/name: airflow-postgresql
    app.kubernetes.io/instance: airflow
spec:
  type: ClusterIP
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/name: airflow-postgresql
    app.kubernetes.io/instance: airflow
