deployment/airflow/kustomize/base/deployment-manifest/route-airflow.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: airflow
  labels:
    app: airflow
spec:
  to:
    kind: Service
    name: airflow
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
